--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
@@ -23,8 +24,14 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.1",
+    "husky": "^8.0.1",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
+  },
+  "lint-staged": {
+    "src/**/*.ts": [
+      "npx eslint --fix 'src/**/*.ts'"
+    ]
   }
 }
