--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "flow-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
-    "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts",
+    "start": "node --experimental-specifier-resolution=node --experimental-modules --no-warnings --loader ts-node/esm src/app.ts",
     "build": "tsc -p .",
     "prepare": "husky install"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.1"
   },
   "devDependencies": {
@@ -19,7 +20,6 @@
     "@types/node": "^18.7.17",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "eslint": "^8.23.1",
-    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.5",
