--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-rate-limit": "^6.6.0",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.6"
+    "mongoose": "^6.6.6",
+    "nodemailer": "^6.8.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -27,6 +28,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.7.17",
+    "@types/nodemailer": "^6.4.6",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "eslint": "^8.23.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
