--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.6",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.7.17",
     "@types/nodemailer": "^6.4.6",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
