--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.6",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.8.0"
+    "nodemailer": "^6.8.0",
+    "sharp": "^0.31.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
