--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^18.7.17",
     "@types/nodemailer": "^6.4.6",
+    "@types/sharp": "^0.31.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "eslint": "^8.23.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
