--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,8 @@
     "semi": ["error", "never"],
     "quotes": ["error", "single"],
     "@typescript-eslint/semi": "off",
-    "@typescript-eslint/explicit-function-return-type": ["error"]
+    "@typescript-eslint/explicit-function-return-type": ["error"],
+    "@typescript-eslint/no-misused-promises": "off"
   },
   "overrides": [
     {
