--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^6.6.6",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
+    "pug": "^3.0.2",
     "sharp": "^0.31.2"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^18.7.17",
     "@types/nodemailer": "^6.4.6",
+    "@types/pug": "^2.0.6",
     "@types/sharp": "^0.31.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "eslint": "^8.23.1",
