--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.ts",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "node --experimental-specifier-resolution=node --experimental-modules --no-warnings --loader ts-node/esm src/app.ts",
     "build": "tsc -p .",
