--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2015",
-    "module": "ESNext",
+    "target": "es2015",
+    "module": "esnext",
     "esModuleInterop": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
