--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.ts",
+  "type": "module",
   "engines": {
     "node": "14.x"
   },
   "scripts": {
+    "prebuild": "rimraf dist",
+    "build": "sucrase ./src -d ./dist --transforms typescript,imports",
+    "pre-prod": "rimraf dist && sucrase ./src -d ./dist --transforms typescript,imports",
     "start": "node --experimental-specifier-resolution=node --experimental-modules --no-warnings --loader ts-node/esm src/app.ts",
-    "build": "tsc -p .",
     "prepare": "husky install"
   },
-  "type": "module",
-  "author": "",
+  "author": "Jakub Serwin",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -26,6 +28,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "pug": "^3.0.2",
+    "rimraf": "^3.0.2",
     "sharp": "^0.31.2"
   },
   "devDependencies": {
@@ -46,6 +49,7 @@
     "eslint-plugin-promise": "^6.0.1",
     "husky": "^8.0.1",
     "nodemon": "^2.0.19",
+    "sucrase": "^3.29.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   },
