--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
   },
   "type": "module",
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "sucrase ./src -d ./dist --transforms typescript,imports",
-    "pre-prod": "rimraf dist && sucrase ./src -d ./dist --transforms typescript,imports",
-    "start": "node --experimental-specifier-resolution=node --experimental-modules --no-warnings --loader ts-node/esm src/app.ts",
+    "start": "NODE_ENV=dev netlify-lambda serve functions_dev",
+    "build": "NODE_ENV=production netlify-lambda build functions_dev",
+    "build:netlify": "tsc && npm run build",
     "prepare": "husky install"
   },
   "author": "Jakub Serwin",
   "license": "ISC",
   "dependencies": {
+    "netlify-lambda": "^1.4.3",
+    "serverless-http": "^1.9.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -49,7 +50,6 @@
     "eslint-plugin-promise": "^6.0.1",
     "husky": "^8.0.1",
     "sucrase": "^3.29.0",
-    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   },
   "lint-staged": {
