--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^6.6.6",
     "multer": "^1.4.5-lts.1",
     "netlify-lambda": "^1.4.3",
+    "@netlify/functions": "^0.7.2",
     "nodemailer": "^6.8.0",
     "pug": "^3.0.2",
     "serverless-http": "^1.9.1"
