--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "NODE_ENV=dev netlify-lambda serve functions",
-    "build": "NODE_ENV=production netlify-lambda build functions",
+    "start": "NODE_ENV=dev netlify-lambda serve functions-dev",
+    "build": "NODE_ENV=production netlify-lambda build functions-dev",
     "build:netlify": "tsc && npm run build",
     "prepare": "husky install"
   },
